--- a/R0_tail/now work/смесь для дурак/история.md
+++ b/R0_tail/now work/смесь для дурак/история.md
@@ -41,16 +41,16 @@
 1984 флакон
 дом попадает в петлю
 как? Шарды падают рядом в кучу
-объеденяются в своём измерении
+объеденяются в своём измерении мультитригеры шардов эден и почкование
 в мини емерджентную сущьность
 Хранитель Времени
 уничтожают мозг носителя
 теряют творческий потенциал
 но продолжают методично експериментировать
-создают лес, холмы, миры на холмах, изнанку.
+создают лес, холмы, миры на холмах, портал в землю изнанку.
 И дом как перходной пункт, портал.
 заканчивается первый выпуск резня
-мульти тригер 
+мульти тригер
 
 1986 флакон 
 вовремя золотого утра сын следуя ПКП выносит Хранителя Времени. тот отпраляет послание в петлю к своим шардам, кластеру
