--- a/R0_tail/now work/структура 1.0.md
+++ b/R0_tail/now work/структура 1.0.md
@@ -7,19 +7,9 @@ R refers to the reliability of the sample. Samples with high R values produce si
 According to Doctor Mother, an R score of 5 indicates a 3-4% chance of unwanted physical changes, and a 0.5% chance of extreme mutations. It also indicates that the sample provides a broad category of powers, rather than a single specific power.[10]
 
 Volatile
-0.5. Молд
-0. лаба
-1. забег
-2. диалог в сейв
-3. соглашение
-4. лаба
-	мигрень
-	рост
+	рост нейро прядь саара табаки лабиринт самозванка
+
 5. Богиня просветление 
-		падение перекидышей перед грибником 
-		сайт
-		кукла
-		лунгмак
 		вечер сплетница статуя зиз дурдом
 
 афтер ДОМ
@@ -29,7 +19,7 @@ Volatile
 	Timeless Theory of Sacrifices: Вторая ступенька. DOM.
 		стая
 	Timeless Theory of Sacrifices: Третья ступенька. HighDoll. Black.
-		мрак + сталкер, хайброу + кукла + цирк, тейла + алек
+		мрак + сталкер, хайброу + кукла + арлекин, тейла + алек
 	Timeless Theory of Sacrifices: Четвёртая ступенька. RedHood. Red.
 		славы + емми, мак + самозванка, прядь, бледный, сука.
 
