--- a/R0_tail/now work/структура 2.0/структура 2.0.md
+++ b/R0_tail/now work/структура 2.0/структура 2.0.md
@@ -57,38 +57,9 @@
 	Солдаты Выверта вламываются в бункер-лабу пакуют Грибника.
 	Ранят, Упускают Прядь.
 	Cобрав все харды. Уничтожают лабу. 
-	Люди выверта подражают скп томас приказывает нефорам украсть у людей выверта претворяющихся СКП грибника. 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+	Люди выверта подражают скп томас приказывает нефорам украсть у людей выверта претворяющихся СКП грибника.
 
 Timeless Theory of Sacrifices: Первая ступенька. Дурак.
-	встреча с богиней сплетница
 
 Перекидыши\омут
 	Замес Лунг Мак, омут апп.
@@ -113,85 +84,18 @@ Timeless Theory of Sacrifices: Первая ступенька. Дурак.
 	саара тебе помочь странная тварь я не збегу и дратся с ним не смогу, я вспоминаю сказки бледного об этом месте, саара ядовит, гипнотизирует песней, любит тёплую кровь.
 	Привет Василиск Саара 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 Неф
 	Отвозят Грибника на подземную парковку, там пересаживаются в фургон с сплетница мрак регент Арлекин и капитаном Выверта.
 	Их отвозят на конспиративную квартиру.
 
 СКП
-	Прилетает Легенда Лунг повержен. 
+	Прилетает Легенда Лунг повержен.
 	пакуют лунга
 
 Грибник
 	Ноут вебка без картинка, заказчик неизвестен
 	нам нужно связатся с вашей коммандой перекидыши
-	я не помню номера телефонов, но они у меня записаны на почте дайте мне доступ в интернет к моему почтовому ящику
+	я не помню номера телефонов, но они у меня записаны на фейк акк
 	лекарство от мигрени мыслителя
 	человеку с вашими таллантами нужна защита по лучше
 	предложить деньги защиту
@@ -225,131 +129,80 @@ Timeless Theory of Sacrifices: Первая ступенька. Дурак.
 		кто-то заметал следы?
 
 Лаба Томас
-	сцена
-		отель ноут батарея бром видос лунг мак
-		видос мак\лунг
-		сайт
-		кукла, 
-		хайброу, 
-		запись разговора с СКП
-		лекарство мигрени сплетница РостСЦ
-		отчетСКП перекидыши
-			нужен подопытный
-	Закупает всю необходимую технику основываясь на данных с хардов лабы омута
 	лабу перекидышам в многоэтажке клоповник в доках
-	работает там грибник
-	тест сил сплетницы
-	Сплетница настраивает его против Перекидышей. Соблазняет его. клин между омут и грибник Сплетница отчёт СКП о Перекидышах прошлый раз дискредитировать перекидышей Хочет применить в лабе грибника. Для этого отдаёт приказ Сплетнице удержать его в Неф. сплетница ему про его прошлое
-	хочет больше узнать о своих силах експеррименты сил грибника
-	реверс инженеринг лекарства от мигрени мыслителя
-	драг сплетнице ретрансляторы черви
-		неф (сплетница + получит все свои бафы получит из гриба максимум)
-			гриб рост ретранслятор, 
-			ретранслятор сплетница вызов от заказчика сос
+		отчетСКП перекидыши
+		сплетница смарт видос лунг мак
+	Сплетница отчёт СКП о Перекидышах прошлый раз дискредитировать перекидышей 
+	<!-- Сплетница настраивает его против Перекидышей. Соблазняет его. клин между омут и грибник  -->
+	лекарство мигрени сплетница 
+	Хочет применить в лабе грибника. Для этого отдаёт приказ Сплетнице удержать его в Неф.
 
 4-10.2.2011
 
+
+
 Перекидыши
-	всё сгорело
-	квест Перекидыши
-	подтверждение это не СКП.
-	СКП диалог переговоры...
+	всё сгорело квест Перекидыши
+	подтверждение это не СКП. СКП диалог переговоры...
 	кто знал про место лабы? кто нас здал? допрос рыжий бледный 
-	допрос рыжий бледный контора занимавшаяся бункером ТомасКальверт коснультантСКП
+	контора занимавшаяся бункером ТомасКальверт коснультантСКП
 	как там саара? искренне огорчён нашей утратой, можем вернутся и устроить показательное жертвоприношение. забей.
-	нанимают Панацею востанавливает тело мозг мёртв
-		мак я знаю чудотворицу\вдохнёт жизнь табаки\вернёт память
-			мак хочет самозванку чтобы та вдохнула жизнь и вылепила крысу
-			мак просит стаю доверится ему найдите её душу а я придумаю как вернуть её тело.
-			найти город мака\клары Слепой и Сплетница находят клару
-			про то что воспоминания в пещере под холмами сплетницу в подХолмы
-			сплетница узнаёт про флаконы воспоминаний
-	узнают про баф грибника Сплетницей
-	лаба выверта труп пряди силы грибника пробаффаные сплетницей для восстановления мозга пряди. всёравно не просыпается
-	мак рана панацея хилит его он копирует её силу пока не получет версию приемлимую и это провацирует Симург на атаку
-		ретригер или почкование?
-	атака на Томми успешно ибо атака Симург
 
 Грибник
-	заказ с сайта кукла шмот
-	хайброу
-	суперчерви передвижныелабы отлично давай заразим всех это полезно
-	червь в флаконе для капель
-	лаба выверт заражение для REDhood для новойволны 
-	трип с гриб+дом
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+	ноут бром фриланс кукла тритон грибная кожа
 сцена
-	приглашение Панацеи славы брандишь и мегават нижний етаж лабы выверта
+	Нанимают Панацею
 		востановление тела пряди, кровообращения, питания тканей
-		гриб мы его наняли для помощи с мозгом
-		сплетница гриб реген мозг
-			регент подсказки
-		прядь всёравно не просыпается активность мозга низкая не работают мендалины, она в коме
-		нужно по експерриментировать с силами Панацеи и Грибника
-			мак
-		отчёт скп про омут
+		востанавливают тело, мозг мёртв кома. Черепной Електро-стимуляция нейронов. наняли Мистер Дрём.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	сплетница гриб реген мозг	регент подсказки
+	Нейросфера
+	драг сплетнице ретрансляторы черви
+		суперчерви передвижныелабы РостСЦ нужен подопытный рост ретранслятор, сплетница вызов от заказчика сос, червь в флаконе для капель
+	тест сил сплетницы неф 
+		( + получит все свои бафы получит из гриба максимум)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 			так что вы здесь делаете?
 				предсказатель в красной рукавичке пресказал что конец света начнётся в США
 				мы пытались выяснить предпосылки, собрать больше информации для дальнейших предсказаний
@@ -386,16 +239,8 @@ Timeless Theory of Sacrifices: Первая ступенька. Дурак.
 				диалог табаки выверт
 			тритон табаки
 
-			Омут, Неф, Трещена церковь Самозванка, запах воспоминание + Мак
-				да я согласна
-				возвращаются исцеляют Прядь
 
-	Панацея
-		Прядь реген мясо
-		Гриб мозг восстановлен
-		прядь в коме мендалины в отрубе
-			лабиринт бледный табаки сплетница
-				саара прядь не просыпается изза нейротоксина саары
+
 		табаки воспоминание всем масово
 			если сделать так то воспоминание случайное ближайшее
 			а если воттакой ритуал то воспоминание конкретное
@@ -404,6 +249,144 @@ Timeless Theory of Sacrifices: Первая ступенька. Дурак.
 			говорят такой то и такой то нейротоксин
 				грибник я хз сила не подсказывает как и что с ним делать
 			мак копирует силу панацеи пробуждает прядь.
+
+			Омут, Неф, Трещена церковь Самозванка, запах воспоминание + Мак
+				да я согласна
+				возвращаются исцеляют Прядь
+
+
+
+		прядь всё равно не просыпается активность мозга низкая не работают
+		нужно по експерриментировать с силами Панацеи и Грибника
+			мак
+	
+
+
+
+
+
+
+	хочет больше узнать о своих силах експеррименты сил грибника
+	реверс инженеринг лекарства от мигрени мыслителя
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+		мак я знаю чудотворицу\вдохнёт жизнь табаки\вернёт память
+			мак хочет самозванку чтобы та вдохнула жизнь и вылепила крысу
+			мак просит стаю доверится ему найдите её душу а я придумаю как вернуть её тело.
+			найти город мака\клары Слепой и Сплетница находят клару
+			про то что воспоминания в пещере под холмами сплетницу в подХолмы
+			сплетница узнаёт про флаконы воспоминаний
+	воскрешение из воспоминания шакала нужно другое днк и тело без памяти и чудо
+	лаба выверта труп. всёравно не просыпается
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	Панацея
+		Гриб мозг восстановлен
+			лабиринт бледный табаки сплетница
+				саара прядь не просыпается изза нейротоксина саары
+		табаки воспоминание всем масово
+			если сделать так то воспоминание случайное ближайшее
+			а если воттакой ритуал то воспоминание конкретное
+				кровь + в зона Дом + медитация летания особое чувство транс
+		панацея и сплетница узнают про Саару
+			мак копирует силу панацеи пробуждает прядь.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	лаба выверт заражение для REDhood для новойволны 
+	, хайброу,
+
+	Закупает всю необходимую технику основываясь на данных с хардов лабы омута
+	работает там грибник
+
+	мак рана панацея хилит его он копирует её силу пока не получет версию приемлимую и это провацирует Симург на атаку
+		ретригер или почкование?
+	атака на Томми успешно ибо атака Симург
+
+
+
+
+
+
+	Панацея
+		Прядь реген мясо
+		Гриб мозг восстановлен
+		прядь в коме мендалины в отрубе
+			лабиринт бледный табаки сплетница
+				саара прядь не просыпается изза нейротоксина саары
 
 	чистка гриб
 	стресс рыцарь чаепитие маркиз депривация сна
@@ -535,34 +518,3 @@ Timeless Theory of Sacrifices: Первая ступенька. Дурак.
 	она не сможет перехитрить ПКП и ДИНУ или ей это слишком сложно
 	что еще может ей повредить? наркотики
 2. майндхард кеп скафандр
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
