--- a/R0_tail/R0_/volatile/dirt/scena/0.4. прядь богиня .md
+++ b/R0_tail/R0_/volatile/dirt/scena/0.4. прядь богиня .md
@@ -5,17 +5,11 @@
 https://wacamolo.bandcamp.com/track/ethnicwhomp
 Salvinorum - Ethnicwhomp
 
-
-
-
-
-С появлением сил, деньги перестали быть для меня проблемой. Я мог кормится грибами, возможно выращивать себе одежду, даже нет смысла двигатся, разве что во избежание пролежней ибо весь спектр радостей жизни я могу синтезировать прямо в мозгу.
-
 До появления сил я был вынужден выполнять дыхательные упражнения ради дозы норадреналина, експерриментировать с депривациями, взаимодействовать с людьми ради дозы окситоцина, работать ради дофамина, выходить на солнце ради серотонина. Стимулировать выбросы гормонов експлуатируя Сценарный Апарат и Поток Образов.
 
 Но вот Умники... Кажется они станут моей новой зависимостью. 
 
-Сплетница прервала мой краткий сон, часы на ноуте оставленном у меня на коленях, свидетельсвовали о доставшихся мне дву или трёх часах сна. на дворе была полночь. Она пришла с двумя носильшиками притащившими пару тумбочек на колёсиках с установленными на них футуристично выглядящими незнакомыми мне устройствами.
+Сплетница прервала мой краткий сон, часы на ноуте оставленном у меня на коленях, свидетельсвовали о доставшихся мне дву или трёх часах сна. на дворе была полночь.
 
 Исписанные литаниями поверхности в квартире. Повергли меня в ступор.
 
