--- a/R0_tail/R0_/volatile/dirt/scena/трип поток ритуал дракон форма .md
+++ b/R0_tail/R0_/volatile/dirt/scena/трип поток ритуал дракон форма .md
@@ -3,9 +3,7 @@
 	поток образов чертоги разума
 	timeless theory of sacrifices
 
-
-поток образов
-чертоги разума
+поток образов чертоги разума
 Иди за драконом спускайся в эту комнату, может еще не поздно застать его в колыбельке.
 БЕЗГРАНИЧНАЯ ВЕРА
 На периферии ума то, во что веришь как в истинное, — истинно и становится истинным в определённых пределах, которые нужно выявить опытным путём или с помощью переживания. Спрятанный от своего я, скрытый набор убеждений и верований контролирует твоё мышление, твои действия, твои чувства.
