--- a/R0_tail/n8/структура 4.0 .md
+++ b/R0_tail/n8/структура 4.0 .md
@@ -1,28 +1,211 @@
-R-0-Volatile-Foreign
-Mixture spliced on 30% with Balance was taken by Trickster, produced somewhat limited power.[2]
+редхуд
+	стресс рыцарь чаепитие маркиз депривация сна
+	психотерапия
+		таблетки софия
+	письмо от папы
+		уничтожение папыного дома
+Панацея
+	лабиринт бледный табаки сплетница
+		саара прядь не просыпается изза нейротоксина саары
+	Прядь реген мясо	прядь в коме мендалины в отрубе панацея и сплетница узнают про Саару
+	лаба выверт заражение для REDhood для новойволны, хайброу,
+	Закупает всю необходимую технику основываясь на данных с хардов лабы омута
+
+Сплетница и Бледный + эмпатогены Грибника. Находят по восспоминаниям Мака Твириновую степь и Самозванку. Показывают ей Золотое Утро.
+Приводят её к Пряди. Мистердрём вывел её из смерти в кому но пробудить всё равно не получается. Клара пробуждает ... Вместо Пряди Василиск. 
+
+_____________________
+	Через Тейлу узнают что София = Призрачный Сталкер, через Тейлу вытаскивают из Сиофии инфу о Виста = Мисти.
+	Рыжий цепляет Висту приводит на вечеринку. В комнату к Сплетнице, Бледному и Лабиринт. Ей дают МДМА. 
+	Договор со Сосплетницей и Терренсом мы вам портал [[1.1.]]
+	Уговаривают помочь с открытием портала в Лес
+_____________________
+
+20.3.2011.
+	Воскрешение Васелиска.
+21.3.2011.
+	Вселиск пишет ИИ заказывает технику.
+22.3.2011.
+	мак рана панацея хилит его он копирует её силу пока не получет версию приемлимую и это провацирует Симург на атаку
+		ретригер или почкование?
+	атака на Томми успешно ибо атака Симург
+23.3.2011.
+	сылы предсказателей в броктон бей начинают сбоить
+	Симург устанавливает свою технику в закрытом канализациионном коллекторе под центром.
+24.3.2011.
+	Васелиску приходит необзодимая техника и она её прячет  устраивает там серверную. Подключает ретрансляторы к мобильным вышкам.в подвалах под Трамвайным депо.
+	Зиз
+		копирует технологию дракон и святого чтобы скопировать ИИ создать фриланс биржу и устроить рубилово
+		дата центр ИИ в канализации под городом
+		датацентр ИИ создающих шумы глушило для техники в другом конце города в кнализации
+		для этого использовала Прядь
+		грибник заказы на фрилансе страннее и страннее
+25.3.2011. 8:03
+	Заказ на чистку дома от грибов
+		чистка гриб
+		спецназ выведете панацею
+	4Слава
 
 
-R value
-R refers to the reliability of the sample. Samples with high R values produce simple, predictable results. Samples with low R values risk physical changes, or simply give wildly varying types of powers.
-According to Doctor Mother, an R score of 5 indicates a 3-4% chance of unwanted physical changes, and a 0.5% chance of extreme mutations. It also indicates that the sample provides a broad category of powers, rather than a single specific power.[10]
 
-Volatile
-	рост нейро прядь саара табаки лабиринт самозванка
+Томас
+	почему силы опять сбоят ты говорила что если её не станет всё заработает
+	так и есть но в этот раз это не из-за неё
+Сплетница
+	добратся туда силами Лабиринт
+	симург тритон
+	Симург Лабиринт под Холмы Сплетница, пусть все узнают правду. Табаки.
+фон
+	лазершоу и слава ищут панацею
 
-5. Богиня просветление 
-		вечер сплетница статуя зиз дурдом
 
-афтер ДОМ
-	грибник тест сплетницы инфа о тритоне выход на тритона
-	бледный рыжий и мортус пересекаются с остальными в Планкине
-	кто напал на лабу
-	Timeless Theory of Sacrifices: Вторая ступенька. DOM.
-		стая
-	Timeless Theory of Sacrifices: Третья ступенька. HighDoll. Black.
-		мрак + сталкер, хайброу + кукла + арлекин, тейла + алек
-	Timeless Theory of Sacrifices: Четвёртая ступенька. RedHood. Red.
-		славы + емми, мак + самозванка, прядь, бледный, сука.
 
+
+
+
+
+
+
+
+цель перекидышей? наш соперник не постижим для доступных нам возможностей
+	решение: хаос удача и демедж менеджмент
+	обрушить всё в хаос и попытатся выжить пока соперник умирает
+	поражение не избежно
+	проиграть в одиночку или вместе с аппонентом?
+	призвать соперника который сможет противостоять аппоненту
+	для этого нам нужна прядь
+	симург это предскажет
+	она не сможет перехитрить ПКП и ДИНУ или ей это слишком сложно
+	что еще может ей повредить? наркотики
+2. майндхард кеп скафандр
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+Сцена
+	виста тейла протоки наш город странный не правельный
+	хайдолл 1.3.11
+		посещение процедуры изятия
+			встреча с родителями на той стороне
+			допрос почему не пришли раньше?
+				помагала в городе
+				контакты с био технарями
+				секс обмен жидкостями? да как?
+					лунг напал на друга пожар он укрыл меня мы дышали через одни лёгкие
+			капельница ужас срывание одежды у вас вредные нейронки приходите на следующей неделе на операцию
+				выдача пайка
+				обыск общюпывание выдача одежды серой мешковатой
+		на выходе Хай ты им веришь?
+			я останусь	вернём тебе тело я тебе должна блабла бла
+				ты вышел далеко за пределы услуг по нашему контракту
+					я не могу не чувствовать себя обязаной тебе хочешь остатся, пожалуйста но позволь мне очистить свою совесть
+			коины монета с чипом
+			обвивание щюпальцами
+				нет пролёт ибо силовое поле стабильно по всей поверхности по этому просто пешком
+	Технари
+		настройка интернета телефонных вышек
+		защита от нацыков
+		кидвин колесничий визг лит виктор василиск
+		устройство в канализации глушилка сигналов и сил предсказателей мыслителей
+	Умники
+		Сплетница под кайфом общаеться с грибами
+		Дина Выверт
+	Четыре меры
+		Слепой Виста Лабиринт
+	Мак\Клара
+	ФлешСлем
+		редхуд сука мистердрём
+	СКП
+		дракон Догадка Одиннадцатый час Оценщик Сторожевые псы
+		оружейник батарея стояк асаулт
+		Стена.
+		ускоренную процедуру проверки проходят все маски СКП.
+		приоритет летающие маски и движки.
+		Маски прошедшие ускоренную-процедуру Изятия и допущены к карантинной зоне СКП N8:
+			Слава0, Рыцарь, Барьер, Мегаватт, Брандиш, ЛазерШоу, Леди Фотон, Бризант, Руна, Чистота, Оружейник, Мисс Ополчение, Батарея, Штурм, Скорость, КидВин, Стояк, Виста, Эгида, Триумф,
+
+		Маски прошедшие процедуру допуска к карантинной зоне СКП N8:
+			 Дракон, Флешета, Сталевар, Ласточких хвост, Adamant • Challenger • Dauntless • Dovetail • Sere • Crucible • Chariot • Gallant † • Toggle
+
+		Маски прошедшие процедуру допуска к карантинной зоне СКП N8(1):
+			Пепельная, также Пепельный Феникс (Ash Phoenix), Сатир, Козел Отпущения,
+___________________________________________________________________________
+
+
+
+Вторая Фаза
 
 
 сценарий
@@ -53,39 +236,6 @@ Volatile
 	дорога домой
 	повелитель двух миров 
 	счастливая жизнь
-
-
-
-
-
-
-
-
-
-В соответствии с Федеральным законом о реагировании на стихийные бедствия и сохранением цивилизации Договор, статья 22, пункт 4b, ГВП назначила вас объектом приказа об убийстве. Члены протектората должны применить смертоносную силу, чтобы положить конец угрозе
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-Вторая Фаза
 
 
 
@@ -147,17 +297,6 @@ Volatile
 
 		Сообщество Истого Сознания Полярник\Матвей
 
-		Стена.
-		ускоренную процедуру проверки проходят все маски СКП.
-		приоритет летающие маски и движки.		
-		Маски прошедшие ускоренную-процедуру Изятия и допущены к карантинной зоне СКП N8:
-			Слава0, Рыцарь, Барьер, Мегаватт, Брандиш, ЛазерШоу, Леди Фотон, Бризант, Руна, Чистота, Оружейник, Мисс Ополчение, Батарея, Штурм, Скорость, КидВин, Стояк, Виста, Эгида, Триумф,
-
-		Маски прошедшие процедуру допуска к карантинной зоне СКП N8:
-			 Дракон, Флешета, Сталевар, Ласточких хвост, Adamant • Challenger • Dauntless • Dovetail • Sere • Crucible • Chariot • Gallant † • Toggle
-
-		Маски прошедшие процедуру допуска к карантинной зоне СКП N8(1):
-			Пепельная, также Пепельный Феникс (Ash Phoenix), Сатир, Козел Отпущения, 
 
 	медообследования и интервью проверка на опасность. 
 
