--- a/R0_tail/n8/структура 4.0 .md
+++ b/R0_tail/n8/структура 4.0 .md
@@ -22,13 +22,12 @@ _____________________
 _____________________
 
 20.3.2011.
-	Воскрешение Васелиска.
+	Воскрешение Васелиска. Сбегает из больницы. Дома разговор с Рыжим "сеструха".
 21.3.2011.
 	Вселиск пишет ИИ заказывает технику.
 22.3.2011.
 	мак рана панацея хилит его он копирует её силу пока не получет версию приемлимую и это провацирует Симург на атаку
 		ретригер или почкование?
-	атака на Томми успешно ибо атака Симург
 23.3.2011.
 	сылы предсказателей в броктон бей начинают сбоить
 	Симург устанавливает свою технику в закрытом канализациионном коллекторе под центром.
@@ -40,6 +39,21 @@ _____________________
 		датацентр ИИ создающих шумы глушило для техники в другом конце города в кнализации
 		для этого использовала Прядь
 		грибник заказы на фрилансе страннее и страннее
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 25.3.2011. 8:03
 	Заказ на чистку дома от грибов
 		чистка гриб
@@ -51,21 +65,13 @@ _____________________
 Томас
 	почему силы опять сбоят ты говорила что если её не станет всё заработает
 	так и есть но в этот раз это не из-за неё
+	атака на Томми успешно ибо атака Симург
 Сплетница
 	добратся туда силами Лабиринт
 	симург тритон
 	Симург Лабиринт под Холмы Сплетница, пусть все узнают правду. Табаки.
 фон
 	лазершоу и слава ищут панацею
-
-
-
-
-
-
-
-
-
 
 цель перекидышей? наш соперник не постижим для доступных нам возможностей
 	решение: хаос удача и демедж менеджмент
